# Intelligent-endpoint

./: README.md
IE-app/: .cache.sqlite  README.md  data.dvc  model.ipynb  package-lock.json  package.json  pyproject.toml
IE-app/API/: app.py
IE-app/models/: 10_TELEMACH___GLAVNI_TRG___STARI_PERON_combined.h5  11_PARTIZANSKA_C.___CANKARJEVA_UL._combined.h5  12_MLINSKA_UL_.___AVTOBUSNA_POSTAJA_combined.h5  13_PARTIZANSKA_C.___ŽELEZNIŠKA_POSTAJA_combined.h5  14_ULICA_MOŠE_PIJADA___UKC_combined.h5  15_LJUBLJANSKA_UL.___II._GIMNAZIJA_combined.h5  16_KOROŠKA_C.___KOROŠKI_VETER_combined.h5  17_NA_POLJANAH___HEROJA_ŠERCERJA_combined.h5  18_LIDL___KOROŠKA_C._combined.h5  19_LIDL___TITOVA_C._combined.h5  1_GOSPOSVETSKA_C.___TURNERJEVA_UL._combined.h5  20_EUROPARK___POBREŠKA_C._combined.h5  21_GORKEGA_UL.___OŠ_FRANCETA_PREŠERNA_combined.h5  22_DVORANA_TABOR_combined.h5  23_LJUBLJANSKA_UL.___FOCHEVA_combined.h5  24_VZAJEMNA_VARUH_ZDRAVJA___BETNAVSKA_C._combined.h5  25_SPAR___TRŽNICA_TABOR_combined.h5  26_NICEHASH___C._PROLETARSKIH_BRIGAD_combined.h5  27_JHMB_–_DVOETAŽNI_MOST_combined.h5  28_UM_FGPA___LENT___SODNI_STOLP_combined.h5  29_PETROL_–_LENT_–_VODNI_STOLP_combined.h5  2_GOSPOSVETSKA_C.___VRBANSKA_C._combined.h5  3_GOSPOSVETSKA_C.___III._GIMNAZIJA_combined.h5  4_STROSSMAYERJEVA_UL.___TRŽNICA_combined.h5  5_MLADINSKA_UL.___TRUBARJEVA_UL._combined.h5  6_POŠTA___SLOMŠKOV_TRG_combined.h5  7_PARTIZANSKA_C.___TIC_combined.h5  8_RAZLAGOVA_UL.___OBČINA_combined.h5  9_NKBM___TRG_LEONA_ŠTUKLJA_combined.h5
IE-app/reports/: metrics.txt  train_metrics.txt
IE-app/tests/: test_basic.py  (+1 more)
(+83 files in other folders)
