[tool.poetry]
name = "ie-app"
version = "0.1.0"
description = ""
authors = ["buju4e <bojan.petrovski@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
mypy = "^1.9.0"
requests = "^2.31.0"
retry-requests = "^2.0.0"
requests-cache = "^1.2.0"
openmeteo-requests = "^1.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
tensorflow = "^2.16.1"
scikit-learn = "^1.4.1.post1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
